--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: ebook_job
+name: flutter_ebook
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -78,6 +78,7 @@ dependencies:
   lottie: ^3.1.2
   animated_text_kit: ^4.2.2
   flutter_animate: ^4.5.0
+  google_sign_in: ^7.1.1
 
 dev_dependencies:
   flutter_test:
