--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   shared_preferences: ^2.3.2
   permission_handler: ^12.0.1
   url_launcher: ^6.3.0
+  flutter_dotenv: ^5.1.0
   
   # Image handling
   image_picker: ^1.1.2
@@ -108,6 +109,7 @@ flutter:
     - assets/icons/
     - assets/animations/
     - assets/illustrations/
+    - .env
 
   # Custom fonts for premium look (commented out until fonts are added)
   # fonts:
